fixed overflow about section

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -82,8 +82,10 @@
 
   /* About */
   .about {
-    padding: 20px 0;
-  }
+	padding: 20px 0;
+	overflow-x: hidden;
+	overflow-y: hidden;
+}
 
   .about .text .about-title {
     width: auto;
